--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@google-cloud/local-auth": "^2.1.0",
     "googleapis": "^105.0.0",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.6.0",
     "next": "16.0.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
